Major refactoring. Using now signal edge interrupts to determine the tx rate more accurately.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,8 @@
     
     add_library (   pmicro-rf
                     rf_device.c
-	            rf_pico.c
-		    rf_synchronizer.c
+	                rf_pico.c
+		            pico_synchronizer.c
                 )
     target_include_directories(pmicro-rf PUBLIC ../inc)
 
