--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "files.associations": {
         "stdint.h": "c",
         "rf_pico.h": "c",
-        "cyw43_arch.h": "c"
+        "cyw43_arch.h": "c",
+        "debug_logging.h": "c"
     }
 }
