--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,10 +6,12 @@
 
     target_link_libraries(pico-rf-test pico_stdlib pmicro-rf)
     
+    # Initialize the Pico SDK
+    pico_sdk_init() 
 
     # enable usb output, disable uart output
-    pico_enable_stdio_usb(pmicro-rf 0)
-    pico_enable_stdio_uart(pmicro-rf 1)
+    pico_enable_stdio_usb(pico-rf-test 0)
+    pico_enable_stdio_uart(pico-rf-test 1)
 
     # create map/bin/hex/uf2 file etc.
     pico_add_extra_outputs(pico-rf-test)
