--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
     
-    add_library (   pmicro-rf
+    add_library (pmicro-rf
                     rx_device.c
                     tx_device.c
                     rf_pico.c
@@ -7,9 +7,10 @@
                 )
     target_include_directories(pmicro-rf PUBLIC ../inc)
 
+    # Keeping this here in case variation is needed. Now it's useless though.
     if (${PICO_BOARD} STREQUAL "pico_w")
         target_compile_definitions(pmicro-rf PRIVATE USING_PICO_W)
-        target_link_libraries(pmicro-rf pico_stdlib pico_cyw43_arch_none)
+        target_link_libraries(pmicro-rf pico_stdlib)
     else()
         target_compile_definitions(pmicro-rf PRIVATE USING_PICO)
         target_link_libraries(pmicro-rf pico_stdlib)
